no-issue: refactor ebl